Изменил интерфейс для таблиц. Поправил модель данных и конвертер (убрал лишнее) и сделал попытку подцепить данные биндингом, но ничего не получается :(.

--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -42,10 +42,16 @@
                     <MisfitStacks fx:id="misfitStacks"/>
                     <VESCurves fx:id="vesCurves"/>
                 </SplitPane>
-                <SplitPane orientation="HORIZONTAL">
-                    <EXPTable fx:id="expTable"/>
-                    <MODTable fx:id="modTable"/>
-                </SplitPane>
+                <TabPane VBox.vgrow="ALWAYS">
+                    <tabs>
+                        <Tab text="%experimentalTable" closable="false">
+                            <EXPTable fx:id="expTable"/>
+                        </Tab>
+                        <Tab text="%modelTable" closable="false">
+                            <MODTable fx:id="modTable"/>
+                        </Tab>
+                    </tabs>
+                </TabPane>
 
                 <!--<Placeholder text="Табличное представление"/>-->
             </SplitPane>
