--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/EXPTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/EXPTable.fxml
@@ -8,7 +8,7 @@
          maxWidth="Infinity"
          stylesheets="@../../common.css"
          VBox.vgrow="ALWAYS">
-    <Label text="%experimentalTable"/>
+    <!--<Label text="%experimentalTable"/>-->
     <TableView fx:id="experimentalTable" maxWidth="Infinity" minWidth="120">
         <columns>
             <TableColumn fx:id="expAB_2Column" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
