--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/MODTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/MODTable.fxml
@@ -8,7 +8,7 @@
          maxWidth="Infinity"
          stylesheets="@../../common.css"
          VBox.vgrow="ALWAYS">
-    <Label text="%modelTable"/>
+    <!--<Label text="%modelTable"/>-->
     <TableView fx:id="modelTable" maxWidth="Infinity" minWidth="60">
         <columns>
             <TableColumn fx:id="modPower" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
