--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -7,8 +7,8 @@
 <?import ru.nucodelabs.gem.view.usercontrols.misfitstacks.MisfitStacks?>
 <?import ru.nucodelabs.gem.view.usercontrols.placeholder.Placeholder?>
 <?import ru.nucodelabs.gem.view.usercontrols.vescurves.VESCurves?>
-<?import ru.nucodelabs.gem.view.usercontrols.vestables.EXPTable?>
-<?import ru.nucodelabs.gem.view.usercontrols.vestables.MODTable?>
+<?import ru.nucodelabs.gem.view.usercontrols.vestables.ExperimentalTable?>
+<?import ru.nucodelabs.gem.view.usercontrols.vestables.ModelTable?>
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          stylesheets="@../common.css"
@@ -45,10 +45,10 @@
                 <TabPane VBox.vgrow="ALWAYS">
                     <tabs>
                         <Tab text="%experimentalTable" closable="false">
-                            <EXPTable fx:id="expTable"/>
+                            <ExperimentalTable fx:id="experimentalTable"/>
                         </Tab>
                         <Tab text="%modelTable" closable="false">
-                            <MODTable fx:id="modTable"/>
+                            <ModelTable fx:id="modelTable"/>
                         </Tab>
                     </tabs>
                 </TabPane>
