little GUI update

--- a/src/main/resources/ru/nucodelabs/gem/view/common.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/common.css
@@ -134,3 +134,9 @@
     -fx-background-color: White;
     -fx-border-color: ForestGreen;
 }
+
+#label {
+    -fx-text-fill: Gray;
+    -fx-font-size: 12;
+    -fx-padding: 5;
+}
