--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/misfitstacks/MisfitStacks.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/misfitstacks/MisfitStacks.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
          alignment="CENTER"
          maxHeight="Infinity"
@@ -13,7 +13,7 @@
          stylesheets="@../../common.css, @MisfitStacks.css"
          VBox.vgrow="ALWAYS">
     <HBox maxWidth="Infinity">
-        <Text fx:id="text" text="%misfit" VBox.vgrow="NEVER"/>
+        <Label fx:id="label" text="%misfit" VBox.vgrow="NEVER"/>
     </HBox>
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" title="\%"
                titleSide="LEFT" minHeight="0" minWidth="0">
