--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
+<?import ru.nucodelabs.gem.view.main.WelcomeScreen?>
 <?import ru.nucodelabs.gem.view.usercontrols.mainmenubar.MainMenuBar?>
 <?import ru.nucodelabs.gem.view.usercontrols.misfitstacks.MisfitStacks?>
 <?import ru.nucodelabs.gem.view.usercontrols.placeholder.Placeholder?>
@@ -14,50 +15,49 @@
          stylesheets="@../common.css"
          maxWidth="Infinity" maxHeight="Infinity">
     <MainMenuBar fx:id="mainMenuBar"/>
-
-    <SplitPane orientation="VERTICAL">
+    <StackPane>
         <SplitPane orientation="VERTICAL">
-            <Placeholder text="%pseudoSection"/>
-            <Placeholder text="%geoSection"/>
-        </SplitPane>
+            <SplitPane orientation="VERTICAL">
+                <Placeholder text="%pseudoSection"/>
+                <Placeholder text="%geoSection"/>
+            </SplitPane>
 
-        <VBox maxWidth="Infinity"
-              maxHeight="Infinity"
-              VBox.vgrow="ALWAYS">
+            <VBox maxWidth="Infinity"
+                  maxHeight="Infinity"
+                  VBox.vgrow="ALWAYS">
 
-            <HBox alignment="CENTER" maxWidth="Infinity" style="-fx-background-color: WhiteSmoke">
-                <HBox style="-fx-padding: 5">
-                    <Button text="← Предыдущий пикет" fx:id="prevButton"/>
+                <HBox alignment="CENTER" maxWidth="Infinity" style="-fx-background-color: WhiteSmoke">
+                    <HBox style="-fx-padding: 5">
+                        <Button text="← Предыдущий пикет" fx:id="prevButton"/>
+                    </HBox>
+                    <HBox HBox.hgrow="ALWAYS" alignment="CENTER">
+                        <Text fx:id="vesTitle" text="VES"/>
+                    </HBox>
+                    <HBox style="-fx-padding: 5">
+                        <Button text="Следующий пикет →" fx:id="nextButton"/>
+                    </HBox>
                 </HBox>
-                <HBox HBox.hgrow="ALWAYS" alignment="CENTER">
-                    <Text fx:id="vesTitle" text="VES"/>
-                </HBox>
-                <HBox style="-fx-padding: 5">
-                    <Button text="Следующий пикет →" fx:id="nextButton"/>
-                </HBox>
-            </HBox>
-            <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS" orientation="HORIZONTAL">
+                <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS">
 
-                <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity" VBox.vgrow="ALWAYS">
-                    <MisfitStacks fx:id="misfitStacks"/>
-                    <VESCurves fx:id="vesCurves"/>
-                </SplitPane>
-                <TabPane VBox.vgrow="ALWAYS">
-                    <tabs>
+                    <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity" VBox.vgrow="ALWAYS">
+                        <MisfitStacks fx:id="misfitStacks"/>
+                        <VESCurves fx:id="vesCurves"/>
+                    </SplitPane>
+                    <TabPane VBox.vgrow="ALWAYS">
                         <Tab text="%experimentalTable" closable="false">
                             <ExperimentalTable fx:id="experimentalTable"/>
                         </Tab>
                         <Tab text="%modelTable" closable="false">
                             <ModelTable fx:id="modelTable"/>
                         </Tab>
-                    </tabs>
-                </TabPane>
+                    </TabPane>
 
-                <!--<Placeholder text="Табличное представление"/>-->
-            </SplitPane>
+                    <!--<Placeholder text="Табличное представление"/>-->
+                </SplitPane>
 
-        </VBox>
+            </VBox>
 
-    </SplitPane>
-
+        </SplitPane>
+        <WelcomeScreen fx:id="welcomeScreen"/>
+    </StackPane>
 </fx:root>
