--- a/src/main/resources/ru/nucodelabs/gem/view/main/WelcomeScreen.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/WelcomeScreen.fxml
@@ -9,9 +9,8 @@
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          prefHeight="400.0" prefWidth="600.0"
-         stylesheets="@../common.css, @WelcomeView.css">
+         stylesheets="@../common.css, @WelcomeScreen.css" style="-fx-background-color: white">
 
-    <MainMenuBar fx:id="menuBar"/>
     <HBox maxWidth="Infinity" maxHeight="Infinity" VBox.vgrow="ALWAYS" alignment="CENTER">
         <VBox alignment="CENTER" maxWidth="Infinity" maxHeight="Infinity">
             <ImageView fitHeight="100" fitWidth="100">
