--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
 <?import ru.nucodelabs.gem.view.main.WelcomeScreen?>
 <?import ru.nucodelabs.gem.view.usercontrols.mainmenubar.MainMenuBar?>
 <?import ru.nucodelabs.gem.view.usercontrols.misfitstacks.MisfitStacks?>
@@ -16,6 +15,7 @@
          maxWidth="Infinity" maxHeight="Infinity">
     <MainMenuBar fx:id="mainMenuBar"/>
     <StackPane>
+
         <SplitPane orientation="VERTICAL">
             <SplitPane orientation="VERTICAL">
                 <Placeholder text="%pseudoSection"/>
@@ -26,16 +26,25 @@
                   maxHeight="Infinity"
                   VBox.vgrow="ALWAYS">
 
-                <HBox alignment="CENTER" maxWidth="Infinity" style="-fx-background-color: WhiteSmoke">
+                <HBox alignment="CENTER_LEFT" maxWidth="Infinity" style="-fx-background-color: WhiteSmoke">
                     <HBox style="-fx-padding: 5">
-                        <Button text="← Предыдущий пикет" fx:id="prevButton"/>
-                    </HBox>
-                    <HBox HBox.hgrow="ALWAYS" alignment="CENTER">
-                        <Text fx:id="vesTitle" text="VES"/>
+                        <Button style="-fx-pref-width: 35" text="%left" fx:id="prevButton"/>
                     </HBox>
                     <HBox style="-fx-padding: 5">
-                        <Button text="Следующий пикет →" fx:id="nextButton"/>
+                        <Button style="-fx-pref-width: 35" text="%right" fx:id="nextButton"/>
                     </HBox>
+                    <Label style="-fx-padding: 5" fx:id="vesTitle" text="VES"/>
+                    <HBox HBox.hgrow="ALWAYS"/>
+                    <HBox style="-fx-padding: 5">
+                        <Button text="%inverse"/>
+                    </HBox>
+                    <HBox style="-fx-padding: 5">
+                        <Button text="Button 2"/>
+                    </HBox>
+                    <HBox style="-fx-padding: 5">
+                        <Button text="Button 3"/>
+                    </HBox>
+
                 </HBox>
                 <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS">
 
@@ -51,13 +60,10 @@
                             <ModelTable fx:id="modelTable"/>
                         </Tab>
                     </TabPane>
-
-                    <!--<Placeholder text="Табличное представление"/>-->
                 </SplitPane>
-
             </VBox>
-
         </SplitPane>
+
         <WelcomeScreen fx:id="welcomeScreen"/>
     </StackPane>
 </fx:root>
