--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/misfitstacks/MisfitStacks.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/misfitstacks/MisfitStacks.fxml
@@ -13,7 +13,7 @@
          stylesheets="@../../common.css, @MisfitStacks.css"
          VBox.vgrow="ALWAYS">
     <HBox maxWidth="Infinity">
-        <Label fx:id="label" text="%misfit" VBox.vgrow="NEVER"/>
+        <Label fx:id="uclabel" text="%misfit" VBox.vgrow="NEVER"/>
     </HBox>
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" title="\%"
                titleSide="LEFT" minHeight="0" minWidth="0">
