--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.fxml
@@ -13,7 +13,7 @@
          stylesheets="@../../common.css, @VESCurves.css"
          VBox.vgrow="ALWAYS">
     <HBox maxWidth="Infinity">
-        <Label fx:id="label" text="%ves" VBox.vgrow="NEVER"/>
+        <Label fx:id="uclabel" text="%ves" VBox.vgrow="NEVER"/>
     </HBox>
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" animated="false">
         <xAxis>
