--- a/src/main/resources/ru/nucodelabs/gem/view/common.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/common.css
@@ -12,6 +12,10 @@
     -fx-text-fill: ForestGreen;
 }
 
+#cancelBtn {
+    -fx-text-fill: DarkSlateGray;
+}
+
 .button:hover {
     -fx-background-color: WhiteSmoke;
 }
