--- a/src/main/resources/ru/nucodelabs/gem/view/main/ImportOptionsPrompt.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/ImportOptionsPrompt.fxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
-<fx:root alignment="CENTER" prefHeight="150" prefWidth="500" type="javafx.scene.layout.VBox"
+<fx:root alignment="TOP_CENTER" prefHeight="150" prefWidth="500" type="javafx.scene.layout.VBox"
          xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
          stylesheets="@../common.css">
-    <Text text="%askImportOption">
-        <VBox.margin>
-            <Insets bottom="30.0"/>
-        </VBox.margin>
-    </Text>
-    <HBox alignment="CENTER">
-        <Button fx:id="addToCurrentBtn" text="%addToCurrent">
-            <HBox.margin>
-                <Insets right="30.0"/>
-            </HBox.margin>
-        </Button>
-        <Button fx:id="addToNewBtn" text="%addToNew"/>
-        <VBox.margin>
-            <Insets/>
-        </VBox.margin>
-    </HBox>
+    <AnchorPane VBox.vgrow="ALWAYS">
+        <Label AnchorPane.topAnchor="25" AnchorPane.leftAnchor="25" text="%askImportOption"/>
+    </AnchorPane>
+    <AnchorPane VBox.vgrow="ALWAYS">
+        <HBox alignment="BOTTOM_RIGHT" AnchorPane.bottomAnchor="20" AnchorPane.rightAnchor="20">
+            <HBox style="-fx-padding: 5">
+                <Button fx:id="addToCurrentBtn" text="%addToCurrent"/>
+            </HBox>
+            <HBox style="-fx-padding: 5">
+                <Button fx:id="addToNewBtn" text="%addToNew"/>
+            </HBox>
+            <HBox style="-fx-padding: 5">
+                <Button fx:id="cancelBtn" text="%cancel"/>
+            </HBox>
+        </HBox>
+    </AnchorPane>
+
 </fx:root>
