--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/mainmenubar/MainMenuBar.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/mainmenubar/MainMenuBar.fxml
@@ -6,12 +6,15 @@
          stylesheets="@../../common.css">
     <MenuBar fx:id="menuBar">
         <Menu text="%file">
-            <MenuItem text="%create"/>
-            <Menu text="%open">
-                <MenuItem fx:id="menuFileOpenEXP" text="EXP"/>
-                <MenuItem fx:id="menuFileOpenMOD" disable="true" text="MOD"/>
+            <MenuItem fx:id="menuFileNewWindow" text="%newWindow"/>
+            <Menu text="%import">
+                <Menu text="%picket">
+                    <MenuItem fx:id="menuFileOpenEXP" text="EXP"/>
+                    <MenuItem fx:id="menuFileOpenMOD" disable="true" text="MOD"/>
+                </Menu>
             </Menu>
-            <MenuItem text="%close"/>
+            <MenuItem fx:id="menuFileSave" text="%save"/>
+            <MenuItem fx:id="menuFileClose" text="%close"/>
         </Menu>
         <Menu text="%edit">
             <MenuItem text="Delete"/>
@@ -22,7 +25,7 @@
             </Menu>
         </Menu>
         <Menu text="%help">
-            <MenuItem text="About"/>
+            <MenuItem text="%about"/>
         </Menu>
     </MenuBar>
 </fx:root>
