--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -33,6 +33,7 @@
                     <HBox style="-fx-padding: 5">
                         <Button style="-fx-pref-width: 35" text="%right" fx:id="nextButton"/>
                     </HBox>
+                    <Label style="-fx-padding: 5; -fx-text-fill: Gray" fx:id="picketNumber" text="0"/>
                     <Label style="-fx-padding: 5" fx:id="vesTitle" text="%picket"/>
                     <HBox HBox.hgrow="ALWAYS"/>
                     <HBox style="-fx-padding: 5">
