--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -2,18 +2,49 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import ru.nucodelabs.gem.view.usercontrols.mainmenubar.MainMenuBar?>
 <?import ru.nucodelabs.gem.view.usercontrols.misfitstacks.MisfitStacks?>
 <?import ru.nucodelabs.gem.view.usercontrols.nofile.NoFileScreen?>
 <?import ru.nucodelabs.gem.view.usercontrols.placeholder.Placeholder?>
 <?import ru.nucodelabs.gem.view.usercontrols.vescurves.VESCurves?>
 <?import ru.nucodelabs.gem.view.usercontrols.vestables.ExperimentalTable?>
 <?import ru.nucodelabs.gem.view.usercontrols.vestables.ModelTable?>
-<fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
-         xmlns:fx="http://javafx.com/fxml"
-         stylesheets="@../common.css"
-         maxWidth="Infinity" maxHeight="Infinity">
-    <MainMenuBar fx:id="mainMenuBar"/>
+<VBox xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml"
+      stylesheets="@../common.css"
+      maxWidth="Infinity" maxHeight="Infinity"
+      fx:controller="ru.nucodelabs.gem.view.main.MainViewController">
+    <MenuBar fx:id="menuBar">
+        <Menu text="%file">
+            <MenuItem text="%newWindow" onAction="#newWindow"/>
+            <Menu text="%open">
+                <MenuItem text="%section" fx:id="menuFileOpenSection" onAction="#openSection"/>
+                <MenuItem text="%picket"/>
+            </Menu>
+            <Menu text="%import">
+                <Menu text="%picket">
+                    <MenuItem text="EXP" fx:id="menuFileOpenEXP" onAction="#importEXP"/>
+                    <MenuItem disable="${controller.noFileOpened}" text="MOD"/>
+                </Menu>
+            </Menu>
+            <Menu text="%save">
+                <MenuItem text="%section" onAction="#saveSection"
+                          disable="${controller.noFileOpened}"/>
+                <MenuItem text="%picket"/>
+            </Menu>
+            <MenuItem text="%close"/>
+        </Menu>
+        <Menu text="%edit">
+            <MenuItem text="Delete"/>
+        </Menu>
+        <Menu fx:id="menuView" text="%view">
+            <Menu text="%legend">
+                <CheckMenuItem fx:id="menuViewVESCurvesLegend" text="%ves"/>
+            </Menu>
+        </Menu>
+        <Menu text="%help">
+            <MenuItem text="%about"/>
+        </Menu>
+    </MenuBar>
     <StackPane>
 
         <SplitPane orientation="VERTICAL">
@@ -28,13 +59,17 @@
 
                 <HBox alignment="CENTER_LEFT" maxWidth="Infinity" style="-fx-background-color: WhiteSmoke">
                     <HBox style="-fx-padding: 5">
-                        <Button style="-fx-pref-width: 35" text="%left" fx:id="prevButton"/>
+                        <Button style="-fx-pref-width: 35" text="%left"
+                                onAction="#switchToPrevPicket"/>
                     </HBox>
                     <HBox style="-fx-padding: 5">
-                        <Button style="-fx-pref-width: 35" text="%right" fx:id="nextButton"/>
+                        <Button style="-fx-pref-width: 35" text="%right"
+                                onAction="#switchToNextPicket"/>
                     </HBox>
-                    <Label style="-fx-padding: 5; -fx-text-fill: Gray" fx:id="picketNumber" text="0"/>
-                    <Label style="-fx-padding: 5" fx:id="vesTitle" text="%picket"/>
+                    <Label style="-fx-padding: 5; -fx-text-fill: Gray"
+                           text="${controller.vesNumber}"/>
+                    <Label style="-fx-padding: 5"
+                           text="${controller.vesTitle}"/>
                     <HBox HBox.hgrow="ALWAYS"/>
                     <HBox style="-fx-padding: 5">
                         <Button text="%inverse"/>
@@ -50,21 +85,34 @@
                 <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS">
 
                     <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity" VBox.vgrow="ALWAYS">
-                        <MisfitStacks fx:id="misfitStacks"/>
-                        <VESCurves fx:id="vesCurves"/>
+                        <MisfitStacks
+                                lowerBoundX="${vesCurves.lowerBoundX}"
+                                data="${controller.misfitStacksData}"/>
+                        <VESCurves fx:id="vesCurves"
+                                   lowerBoundX="${controller.vesCurvesXLowerBound}"
+                                   upperBoundX="${controller.vesCurvesXUpperBound}"
+                                   lowerBoundY="${controller.vesCurvesYLowerBound}"
+                                   upperBoundY="${controller.vesCurvesYUpperBound}"
+                                   legendVisible="${menuViewVESCurvesLegend.selected}"
+                                   data="${controller.vesCurvesData}"/>
                     </SplitPane>
                     <TabPane VBox.vgrow="ALWAYS">
                         <Tab text="%experimentalTable" closable="false">
-                            <ExperimentalTable fx:id="experimentalTable"/>
+                            <ExperimentalTable
+                                    items="${controller.expTableData}"/>
                         </Tab>
                         <Tab text="%modelTable" closable="false">
-                            <ModelTable fx:id="modelTable"/>
+                            <ModelTable
+                                    items="${controller.modelTableData}"/>
                         </Tab>
                     </TabPane>
                 </SplitPane>
             </VBox>
         </SplitPane>
 
-        <NoFileScreen fx:id="noFileScreen"/>
+        <NoFileScreen fx:id="noFileScreen"
+                      visible="${controller.noFileOpened}"
+                      openSectionOnAction="${menuFileOpenSection.onAction}"
+                      openEXPOnAction="${menuFileOpenEXP.onAction}"/>
     </StackPane>
-</fx:root>
+</VBox>
