--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.fxml
@@ -18,7 +18,7 @@
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" animated="false">
         <xAxis>
             <NumberAxis fx:id="lineChartXAxis" forceZeroInRange="false" label="AB/2 (m)"
-                        side="BOTTOM" tickUnit="1.0" autoRanging="false">
+                        side="BOTTOM" tickUnit="1.0" autoRanging="false" lowerBound="-1" upperBound="4">
                 <tickLabelFormatter>
                     <PowerOf10Formatter/>
                 </tickLabelFormatter>
@@ -26,7 +26,8 @@
         </xAxis>
         <yAxis>
             <NumberAxis fx:id="lineChartYAxis" forceZeroInRange="false"
-                        label="ρₐ (Ohm‧m)" side="LEFT" tickUnit="1.0" autoRanging="false">
+                        label="ρₐ (Ohm‧m)" side="LEFT" tickUnit="1.0" autoRanging="false" lowerBound="-1"
+                        upperBound="4">
                 <tickLabelFormatter>
                     <PowerOf10Formatter/>
                 </tickLabelFormatter>
