Close file implemented

--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -31,7 +31,7 @@
                           disable="${controller.noFileOpened}"/>
                 <MenuItem text="%picket"/>
             </Menu>
-            <MenuItem text="%close"/>
+            <MenuItem text="%close" onAction="#closeFile"/>
         </Menu>
         <Menu text="%edit">
             <MenuItem text="Delete"/>
