--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -103,7 +103,11 @@
                         </Tab>
                         <Tab text="%modelTable" closable="false">
                             <ModelTable
-                                    items="${controller.modelTableData}"/>
+                                    items="${controller.modelTableData}">
+                                <placeholder>
+                                    <Button text="%newModel"/>
+                                </placeholder>
+                            </ModelTable>
                         </Tab>
                     </TabPane>
                 </SplitPane>
